--- a/sample01/index.html
+++ b/sample01/index.html
@@ -12,9 +12,17 @@
   <div class="content">
     <h1>入会申し込み</h1>
     <p>入会するには、次のフォームに必要事項をご記入ください</p>
-    <p>メールアドレス : <input type="email" name="mymail"></p>
-    <p>パスワード : <input type="password" name="password"></p>
-    <button type="submit">登録する</button>
+    <div class="control">
+      <label for="mymail">メールアドレス <span class="required">必須</span></label>
+      <input id="mymail" type="email" name="mymail">
+    </div>
+    <div class="control">
+      <label for="password">パスワード <span class="required">必須</span></label>
+      <input id="password" type="password" name="password">
+    </div>
+    <div class="control">
+      <button type="submit">登録する</button>
+    </div>
   </div>
 </body>
 </html> 
